--- a/ansible/telegraf.conf.j2
+++ b/ansible/telegraf.conf.j2
@@ -17,19 +17,32 @@
   percpu = true
   totalcpu = true
   fielddrop = ["time_*"]
+
 [[inputs.disk]]
   ignore_fs = ["tmpfs", "devtmpfs"]
+
 [[inputs.diskio]]
+
 [[inputs.kernel]]
+
 [[inputs.mem]]
+
 [[inputs.processes]]
+
 [[inputs.swap]]
+
 [[inputs.system]]
+
 [[inputs.net]]
   interfaces = []
+
 [[inputs.docker]]
   endpoint = "unix:///var/run/docker.sock"
+
 [[inputs.netstat]]
   interval = "30s"
+
 [[outputs.influxdb]]
-  urls = ["http://{{ collector_address }}:8086"]
+    # Send to `aggregator` machines on the `monitor` network
+    urls = ["http://192.168.43.241:8086"]
+    database = "telegraf"
