--- a/misc/mariadb-galera.conf.j2
+++ b/misc/mariadb-galera.conf.j2
@@ -23,8 +23,10 @@ innodb_log_buffer_size          = 64M
 # innodb_flush_method             = O_DIRECT
 innodb_log_file_size            = 50M
 
-# In the following we use the `database` network
-wsrep_cluster_address="gcomm://{% for h in groups['database'] %}{{ hostvars[h]['ansible_' + database]['ipv4']['address'] }}{% if not loop.last %},{% endif%}{% endfor %}"
+# In the following we use the `RDBMS` network
+wsrep_cluster_address="gcomm://{% for h in groups['RDBMS'] -%}
+                                 {{ hostvars[h]['ansible_' + RDBMS]['ipv4']['address'] }}{% if not loop.last %},{% endif%}
+                               {%- endfor %}"
 
 # https://mariadb.com/kb/en/library/galera-cluster-system-variables/#wsrep_sync_wait
 # wsrep_sync_wait=15
