--- a/misc/mariadb-galera.conf.j2
+++ b/misc/mariadb-galera.conf.j2
@@ -24,7 +24,7 @@ innodb_log_buffer_size          = 64M
 innodb_log_file_size            = 50M
 
 # In the following we use the `RDBMS` network
-wsrep_cluster_address="gcomm://{% for h in groups['RDBMS'] -%}
+wsrep_cluster_address="gcomm://{% for h in groups[RDBMS_role] -%}
                                  {{ hostvars[h]['ansible_' + RDBMS]['ipv4']['address'] }}{% if not loop.last %},{% endif%}
                                {%- endfor %}"
 
