Update to enoslib v6

--- a/misc/mariadb-galera.conf.j2
+++ b/misc/mariadb-galera.conf.j2
@@ -25,7 +25,7 @@ innodb_log_file_size            = 50M
 
 # In the following we use the `RDBMS` network
 wsrep_cluster_address="gcomm://{% for h in groups[RDBMS_role] -%}
-                                 {{ hostvars[h]['ansible_' + RDBMS]['ipv4']['address'] }}{% if not loop.last %},{% endif%}
+                                 {{ hostvars[h][RDBMS_role + '_ipv4'] }}{% if not loop.last %},{% endif%}
                                {%- endfor %}"
 
 # https://mariadb.com/kb/en/library/galera-cluster-system-variables/#wsrep_sync_wait
