--- a/misc/telegraf.conf.j2
+++ b/misc/telegraf.conf.j2
@@ -45,6 +45,6 @@
 [[outputs.influxdb]]
     # Send to `aggregator` machines on the `monitor` network
     urls = [{% for h in groups['aggregator'] %}
-            "http://{{ hostvars[h]['ansible_' + monitor]['ipv4']['address'] }}:8086"{% if not loop.last %},{% endif%}
+            "http://{{ hostvars[h]['monitor_ipv4'] }}:8086"{% if not loop.last %},{% endif%}
             {% endfor %}]
     database = "telegraf"
